# remote-debug

./: README.md  pixi.toml  pyproject.toml
.github/workflows/: publish.yml  pypi_publish.yml
conda.recipe/: meta.yaml
src/remote_debug/: __init__.py  api.py  cli.py
tests/: dummy_test.py  test_cli.py
