[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "remote-debug"
dynamic = ["version"]  # Tells modern pip/build tools the version is dynamic
description = "A helper tool for remote debugging on HPC clusters."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [
    { name = "Paul Link", email = "paul.link@student.kit.edu" },
]
dependencies = [
    "rich-click",
    "debugpy",
    "questionary",
]

[tool.setuptools_scm]

[project.scripts]
rdg = "remote_debug.cli:cli"



[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]